--- a/plugins/nf-co2footprint/src/resources/CO2FootprintReportTemplate.html
+++ b/plugins/nf-co2footprint/src/resources/CO2FootprintReportTemplate.html
@@ -221,6 +221,21 @@
       </div>
     </div>
 
+    <h4>Energy consumption</h4>
+    <ul class="nav nav-tabs" id="energyplot_tabs" role="tablist">
+      <li class="nav-item">
+        <a class="nav-link active" id="energyplot_tablink" data-toggle="tab" href="#energyplot_tabpanel" role="tab" aria-controls="pctenergyplot_tabpanel" aria-expanded="false">
+          Raw Usage
+        </a>
+      </li>
+    </ul>
+    <div class="tab-content" id="energyplot_tabcontent">
+      <div class="tab-pane fade show active" id="energyplot_tabpanel" role="tabpanel">
+        <div id="energyplot"></div>
+      </div>
+      </div>
+    </div>
+
 
   <div class="container">
     <div id="table-container">
