add readable units plots in a new tab

--- a/plugins/nf-co2footprint/src/resources/CO2FootprintReportTemplate.html
+++ b/plugins/nf-co2footprint/src/resources/CO2FootprintReportTemplate.html
@@ -209,8 +209,13 @@
     <h4>CO2e</h4>
     <ul class="nav nav-tabs" id="co2eplot_tabs" role="tablist">
       <li class="nav-item">
-        <a class="nav-link active" id="co2eplot_tablink" data-toggle="tab" href="#co2eplot_tabpanel" role="tab" aria-controls="pctco2eplot_tabpanel" aria-expanded="false">
+        <a class="nav-link active" id="co2eplot_tablink" data-toggle="tab" href="#co2eplot_tabpanel" role="tab" aria-controls="co2eplot_tabpanel" aria-expanded="false">
           Raw Emisions
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" id="pctco2eplot_tablink" data-toggle="tab" href="#pctco2eplot_tabpanel" role="tab" aria-controls="pctco2eplot_tabpanel" aria-expanded="false">
+          Emisions Readable Units
         </a>
       </li>
     </ul>
@@ -218,19 +223,30 @@
       <div class="tab-pane fade show active" id="co2eplot_tabpanel" role="tabpanel">
         <div id="co2eplot"></div>
       </div>
+      <div class="tab-pane fade" id="pctco2eplot_tabpanel" role="tabpanel">
+        <div id="pctco2eplot"></div>
+      </div>
     </div>
 
     <h4>Energy consumption</h4>
     <ul class="nav nav-tabs" id="energyplot_tabs" role="tablist">
       <li class="nav-item">
-        <a class="nav-link active" id="energyplot_tablink" data-toggle="tab" href="#energyplot_tabpanel" role="tab" aria-controls="pctenergyplot_tabpanel" aria-expanded="false">
+        <a class="nav-link active" id="energyplot_tablink" data-toggle="tab" href="#energyplot_tabpanel" role="tab" aria-controls="energyplot_tabpanel" aria-expanded="false">
           Raw Consumption
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" id="pctenergyplot_tablink" data-toggle="tab" href="#pctenergyplot_tabpanel" role="tab" aria-controls="pctenergyplot_tabpanel" aria-expanded="false">
+          Consumption Readable Units
         </a>
       </li>
     </ul>
     <div class="tab-content" id="energyplot_tabcontent">
       <div class="tab-pane fade show active" id="energyplot_tabpanel" role="tabpanel">
         <div id="energyplot"></div>
+      </div>
+      <div class="tab-pane fade" id="pctenergyplot_tabpanel" role="tabpanel">
+        <div id="pctenergyplot"></div>
       </div>
     </div>
   </div>
