--- a/plugins/nf-co2footprint/src/resources/CO2FootprintReportTemplate.html
+++ b/plugins/nf-co2footprint/src/resources/CO2FootprintReportTemplate.html
@@ -203,7 +203,7 @@
   </div>
 
   <div class="container">
-    <h2 id="resources" style="padding-top: 80px;">CO2 footprint Mesures</h2>
+    <h2 id="resources" style="padding-top: 80px;">CO2 Footprint Measures</h2>
     <p>These plots give an overview of the distribution of resource usage for each process.</p>
 
     <h4>CO2e</h4>
