Add reference to green algorithm paper in report

--- a/plugins/nf-co2footprint/src/resources/CO2FootprintReportTemplate.html
+++ b/plugins/nf-co2footprint/src/resources/CO2FootprintReportTemplate.html
@@ -231,6 +231,12 @@
         <dd class="col-sm-3">${co2_totals.plane_flights}</dd>
         <% } %>
       </dl>
+
+      <p>The calculation of these values is based on the carbon footprint computation method
+        developed in the Green Algorithms project: www.green-algorithms.org</p>
+      <p>Lannelongue, L., Grealey, J., Inouye, M.,
+        Green Algorithms: Quantifying the Carbon Footprint of Computation.
+        Adv. Sci. 2021, 2100707. https://doi.org/10.1002/advs.202100707</p>
     </div>
   </div>
 
