--- a/plugins/nf-co2footprint/src/resources/CO2FootprintReportTemplate.html
+++ b/plugins/nf-co2footprint/src/resources/CO2FootprintReportTemplate.html
@@ -213,19 +213,19 @@
 
       <p>This is equivalent to:</p>
       <dl class="row small">
-        <dt class="col-sm-6"><i class="fa fa-tree"></i> Months a tree would need to sequester this amount of CO2</dt>
+        <dt class="col-sm-6">&#127795 Months a tree would need to sequester this amount of CO2</dt>
         <dd class="col-sm-3">${co2_totals.tree}</dd>
 
-        <dt class="col-sm-6"><i class="fa fa-car"></i> Km by car</dt>
+        <dt class="col-sm-6">&#128663 Km by car</dt>
         <dd class="col-sm-3">${co2_totals.car}</dd>
 
         <% if (co2_totals.plane_percent) { %>
-        <dt class="col-sm-6"><i class="fa fa-plane"></i> Percentage of a flight Paris - London</dt>
+        <dt class="col-sm-6">&#128745 Percentage of a flight Paris - London</dt>
         <dd class="col-sm-3">${co2_totals.plane_percent}%</dd>
         <% } %>
 
         <% if (co2_totals.plane_flights) { %>
-        <dt class="col-sm-6"><i class="fa fa-plane"></i> Number of flights Paris - London</dt>
+        <dt class="col-sm-6">&#128745 Number of flights Paris - London</dt>
         <dd class="col-sm-3">${co2_totals.plane_flights}</dd>
         <% } %>
       </dl>
