--- a/plugins/nf-co2footprint/src/resources/CO2FootprintReportTemplate.html
+++ b/plugins/nf-co2footprint/src/resources/CO2FootprintReportTemplate.html
@@ -22,6 +22,8 @@
   <meta name="author" content="Sabrina Krakau">
   <link rel="icon" type="image/png" href="https://www.nextflow.io/img/favicon.png" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+  <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 
   <title>[${workflow.runName}] Nextflow Workflow Report</title>
 
@@ -236,6 +238,13 @@
         Green Algorithms: Quantifying the Carbon Footprint of Computation.
         Adv. Sci. 2021, 2100707. https://doi.org/10.1002/advs.202100707</p>
     </div>
+  </div>
+
+  <div class="container">
+    <p>
+      The equation used for the calculation of the carbon footprint (C) is:
+      &#92&#91C = t &#92cdot &#40 n_c &#92cdot P_c &#92cdot u_c &#92cdot + n_m &#92cdot P_m &#41 &#92cdot PUE &#92cdot CI&#92&#93
+    </p>
   </div>
 
   <div class="container">
