--- a/plugins/nf-co2footprint/src/resources/CO2FootprintReportTemplate.html
+++ b/plugins/nf-co2footprint/src/resources/CO2FootprintReportTemplate.html
@@ -242,7 +242,7 @@
 
   <div class="container">
     <p>
-      The equation used for the calculation of the carbon footprint (C) is:
+      The equation used for the calculation of the carbon footprint (&#92(C&#92)) is:
       &#92&#91C = t &#92cdot &#40 n_c &#92cdot P_c &#92cdot u_c &#92cdot + n_m &#92cdot P_m &#41 &#92cdot PUE &#92cdot CI&#92&#93
     </p>
   </div>
