Add description aboutCO2e

--- a/plugins/nf-co2footprint/src/resources/CO2FootprintReportTemplate.html
+++ b/plugins/nf-co2footprint/src/resources/CO2FootprintReportTemplate.html
@@ -239,8 +239,11 @@
   </div>
 
   <div class="container">
-    <h2 id="resources" style="padding-top: 80px;">CO2 Footprint Measures</h2>
-    <p>These plots give an overview of the distribution of resource usage for each process.</p>
+    <h2 id="resources" style="padding-top: 80px;">CO2e Footprint Measures</h2>
+    <p>These plots give an overview of the distribution of resource usage for each process.
+      A CO<sub>2</sub> equivalent (CO<sub>2</sub>e) is a metric used to compare the emissions from various greenhouse gases based on their impact on global warming.
+      For this, the amounts of other gases are converted to the amount of CO<sub>2</sub> that would have the same impact on global warming (over a 100-year period).
+    </p>
 
     <h4>CO2e</h4>
     <ul class="nav nav-tabs" id="co2eplot_tabs" role="tablist">
