Change CO2 to CO2e

--- a/plugins/nf-co2footprint/src/resources/CO2FootprintReportTemplate.html
+++ b/plugins/nf-co2footprint/src/resources/CO2FootprintReportTemplate.html
@@ -201,9 +201,9 @@
         <dd class="col-sm-9">version ${workflow.nextflow.version}, build ${workflow.nextflow.build} (${workflow.nextflow.timestamp})</dd>
       </dl>
 
-      <dt>Total CO2 footprint measures</dt>
+      <dt>Total CO2e footprint measures</dt>
       <dl class="row small">
-        <dt class="col-sm-3">Total CO2 emission</dt>
+        <dt class="col-sm-3">Total CO2e emission</dt>
         <dd class="col-sm-9">${co2_totals.co2}g</dd>
 
         <dt class="col-sm-3">Total energy consumption</dt>
