Apply suggestions from code review
Co-authored-by: Phil Ewels <phil.ewels@seqera.io>

--- a/plugins/nf-co2footprint/src/resources/CO2FootprintReportTemplate.html
+++ b/plugins/nf-co2footprint/src/resources/CO2FootprintReportTemplate.html
@@ -57,7 +57,7 @@
     height:50px;
   }
   .metric {
-    font-size: 2.5rem;
+    font-size: 2rem;
     font-weight: 300;
     line-height: 1.2;
   }
@@ -202,7 +202,7 @@
         <div class="col-12 col-md-6 col-xl"><div class="metric-card card my-3">
           <span class="metric">${co2_totals.car}</span>
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="currentColor" d="m5 11l1.5-4.5h11L19 11m-1.5 5a1.5 1.5 0 0 1-1.5-1.5a1.5 1.5 0 0 1 1.5-1.5a1.5 1.5 0 0 1 1.5 1.5a1.5 1.5 0 0 1-1.5 1.5m-11 0A1.5 1.5 0 0 1 5 14.5A1.5 1.5 0 0 1 6.5 13A1.5 1.5 0 0 1 8 14.5A1.5 1.5 0 0 1 6.5 16M18.92 6c-.2-.58-.76-1-1.42-1h-11c-.66 0-1.22.42-1.42 1L3 12v8a1 1 0 0 0 1 1h1a1 1 0 0 0 1-1v-1h12v1a1 1 0 0 0 1 1h1a1 1 0 0 0 1-1v-8l-2.08-6Z"/></svg>
-          <span class="metric-title">Km by car</span>
+          <span class="metric-title">km by car</span>
         </div></div>
         <div class="col-12 col-md-6 col-xl"><div class="metric-card card my-3">
           <% if (co2_totals.plane_percent) { %>
