Retrieve and report nf-co2footprint version

--- a/plugins/nf-co2footprint/src/resources/CO2FootprintReportTemplate.html
+++ b/plugins/nf-co2footprint/src/resources/CO2FootprintReportTemplate.html
@@ -180,6 +180,9 @@
       <dl>
         <dt>Nextflow version</dt>
         <dd>version ${workflow.nextflow.version}, build ${workflow.nextflow.build} (${workflow.nextflow.timestamp})</dd>
+
+        <dt>nf-co2footprint plugin version</dt>
+        <dd>version ${plugin_version}</dd>
       </dl>
 
       <h3 class="mt-5">Total CO<sub>2</sub>e footprint measures</h3>
