formating: energy axis to the right, do not plot energy, remove tab

--- a/plugins/nf-co2footprint/src/resources/CO2FootprintReportTemplate.html
+++ b/plugins/nf-co2footprint/src/resources/CO2FootprintReportTemplate.html
@@ -235,19 +235,8 @@
   <div class="container">
     <h2 id="resources" style="padding-top: 80px;">CO2e Footprint Measures</h2>
 
-    <ul class="nav nav-tabs" id="co2eplot_tabs" role="tablist">
-      <li class="nav-item">
-        <a class="nav-link active" id="co2eplot_tablink" data-toggle="tab" href="#co2eplot_tabpanel" role="tab" aria-controls="co2eplot_tabpanel" aria-expanded="false">
-          Raw values
-        </a>
-      </li>
-    </ul>
-    <div class="tab-content" id="co2eplot_tabcontent">
-      <div class="tab-pane fade show active" id="co2eplot_tabpanel" role="tabpanel">
-        <div id="co2eplot"></div>
-      </div>
-    </div>
-
+    <div id="co2eplot"></div>
+    <p>CO2 emission values are depicted on the plot. The proportional values of energy consumption are represented on the right y-axis.</p>
 
   <div class="container">
     <div id="table-container">
