Apply suggestions from code review
Co-authored-by: Sabrina Krakau <sabrinakrakau@gmail.com>

--- a/plugins/nf-co2footprint/src/resources/CO2FootprintReportTemplate.html
+++ b/plugins/nf-co2footprint/src/resources/CO2FootprintReportTemplate.html
@@ -233,10 +233,10 @@
   </div>
 
   <div class="container">
-    <h2 id="resources" style="padding-top: 80px;">CO2e Footprint Measures</h2>
+    <h2 id="resources" style="padding-top: 80px;">CO<sub>2</sub>e Footprint Measures</h2>
 
     <div id="co2eplot"></div>
-    <p>CO2 emission values are depicted on the plot. The proportional values of energy consumption are represented on the right y-axis.</p>
+    <p>The plot shows the distribution of CO<sub>2</sub>e emissions and corresponding energy consumptions for each workflow process. The values that are displayed when hovering over the plot refer to the CO<sub>2</sub>e emissions.</p>
 
   <div class="container">
     <div id="table-container">
