fix rows/columns, one option per row

--- a/plugins/nf-co2footprint/src/resources/CO2FootprintReportTemplate.html
+++ b/plugins/nf-co2footprint/src/resources/CO2FootprintReportTemplate.html
@@ -294,8 +294,14 @@
     </div>
   </div>
 
-  <div>
-    <table class="table small table-striped" id="options_table"></table>
+  <div class="container">
+    <div id="table-container">
+      <h2 id="options" style="padding-top: 80px;">Options</h2>
+      <p>This table shows the nf-co2footprint plugin options that were used to generate the report.</p>
+    </div>
+    <div class="container-fluid">
+      <table class="table small table-striped" id="options_table"></table>
+    </div>
   </div>
 
   <footer>
