Adjust description in report

--- a/plugins/nf-co2footprint/src/resources/CO2FootprintReportTemplate.html
+++ b/plugins/nf-co2footprint/src/resources/CO2FootprintReportTemplate.html
@@ -297,7 +297,7 @@
   <div class="container">
     <div id="table-container">
       <h2 id="options" style="padding-top: 80px;">Options</h2>
-      <p>This table shows the nf-co2footprint plugin options that were used to generate the report.</p>
+      <p>This table shows the nf-co2footprint plugin options that were used to calculate the CO<sub>2</sub>e footprint measures.</p>
     </div>
     <div class="container-fluid">
       <table class="table small table-striped" id="options_table"></table>
