--- a/plugins/nf-co2footprint/src/resources/CO2FootprintReportTemplate.html
+++ b/plugins/nf-co2footprint/src/resources/CO2FootprintReportTemplate.html
@@ -269,17 +269,28 @@
           </li>
           <li>
             <% if (used_EM_api) { %>
-              The real-time carbon intensity (CI) values used in the calculation originate from
-              <a href="https://www.electricitymaps.com/" target="_blank" rel="noopener">Electricity Maps</a>
+              The carbon intensity (CI) values used in the calculation are based on real-time data from
+              <a href="https://www.electricitymaps.com/" target="_blank" rel="noopener" style="color: #17a2b8">Electricity Maps</a>
               accessed via their API, under the
               <a href="https://opendatacommons.org/licenses/odbl/1-0/" target="_blank" rel="noopener">Open Database License (ODbL)</a>.
-              See the license link for full terms and conditions.
+              In some cases, fallback values from the 2024 yearly historical data may have been used if real-time data was unavailable.<br>
+              <span class="font-italic small">
+                Electricity Maps (2025). Real-time Carbon Intensity Data accessed via API (last accessed: ${'PLACEHOLDER'}).
+                <a href="https://www.electricitymaps.com/" target="_blank" rel="noopener">
+                  https://www.electricitymaps.com
+                </a>
+              </span>
             <% } else { %>
               The carbon intensity (CI) values used in the calculation originate from
               <a href="https://www.electricitymaps.com/" target="_blank" rel="noopener">Electricity Maps</a>
               under the
-              <a href="https://opendatacommons.org/licenses/odbl/1-0/" target="_blank" rel="noopener">Open Database License (ODbL)</a>.
-              See the license link for full terms and conditions.
+              <a href="https://opendatacommons.org/licenses/odbl/1-0/" target="_blank" rel="noopener">Open Database License (ODbL)</a>.<br>
+              <span class="font-italic small">
+                Electricity Maps (2025). 2024 Yearly Carbon Intensity Data (Version January 27, 2025).
+                <a href="https://www.electricitymaps.com/" target="_blank" rel="noopener">
+                  https://www.electricitymaps.com
+                </a>
+              </span>
             <% } %>
           </li>
         </ul>
