Fix: adressed final review changes on data attribution
Signed-off-by: nadnein <nadjav.18@gmail.com>

--- a/plugins/nf-co2footprint/src/resources/CO2FootprintReportTemplate.html
+++ b/plugins/nf-co2footprint/src/resources/CO2FootprintReportTemplate.html
@@ -273,7 +273,7 @@
               <a href="https://www.electricitymaps.com/" target="_blank" rel="noopener" style="color: #17a2b8">Electricity Maps</a>
               accessed via their API, under the
               <a href="https://opendatacommons.org/licenses/odbl/1-0/" target="_blank" rel="noopener">Open Database License (ODbL)</a>.
-              In some cases, fallback values from the 2024 yearly historical data may have been used if real-time data was unavailable.<br>
+              In the event that real-time data was unavailable, fallback values from the 2024 yearly historical data were used.<br>
               <span class="font-italic small">
                 Electricity Maps (2025). Real-time Carbon Intensity Data accessed via API (last accessed: ${'PLACEHOLDER'}).
                 <a href="https://www.electricitymaps.com/" target="_blank" rel="noopener">
