--- a/plugins/nf-co2footprint/src/resources/assets/CO2FootprintReportTemplate.html
+++ b/plugins/nf-co2footprint/src/resources/assets/CO2FootprintReportTemplate.html
@@ -275,7 +275,13 @@
               <a href="https://opendatacommons.org/licenses/odbl/1-0/" target="_blank" rel="noopener">Open Database License (ODbL)</a>.
               In the event that real-time data was unavailable, fallback values from the 2024 yearly historical data were used.<br>
               <span class="font-italic small">
-                Electricity Maps (2025). Real-time Carbon Intensity Data accessed via API (Retrieved ${workflow.start.format('MMM dd, yyyy')}). Electricity Maps.
+                Electricity Maps (2025). Real-time Carbon Intensity Data accessed via API
+                (<% if (workflow.start.format('MMM dd, yyyy') != workflow.complete.format('MMM dd, yyyy')) { %>
+                  for the period ${workflow.start.format('MMM dd, yyyy')} to ${workflow.complete.format('MMM dd, yyyy')}
+                <% } else { %>
+                  retrieved: ${workflow.start.format('MMM dd, yyyy')}
+                <% } %>).
+                Electricity Maps.
                 <a href="https://www.electricitymaps.com/" target="_blank" rel="noopener">
                   https://www.electricitymaps.com
                 </a>
