Test: Updated test values after intended changes trough rebasing
Signed-off-by: JosuaCarl <josua.carl@uni-tuebingen.de>

--- a/plugins/nf-co2footprint/src/testResources/report_test.html
+++ b/plugins/nf-co2footprint/src/testResources/report_test.html
@@ -293,7 +293,7 @@ table.DTCR_clonedTable.dataTable{position:absolute !important;background-color:r
               under the
               <a href="https://opendatacommons.org/licenses/odbl/1-0/" target="_blank" rel="noopener">Open Database License (ODbL)</a>.<br>
               <span class="font-italic small">
-                Electricity Maps (2025). 2024 Yearly Carbon Intensity Data (Version January 27, 2025).
+                Electricity Maps (2025). 2024 Yearly Carbon Intensity Data (Version January 27, 2025). Electricity Maps.
                 <a href="https://www.electricitymaps.com/" target="_blank" rel="noopener">
                   https://www.electricitymaps.com
                 </a>
