Refactor: Unified calls in HTML template
Signed-off-by: JosuaCarl <josua.carl@uni-tuebingen.de>

--- a/plugins/nf-co2footprint/src/resources/assets/CO2FootprintReportTemplate.html
+++ b/plugins/nf-co2footprint/src/resources/assets/CO2FootprintReportTemplate.html
@@ -236,8 +236,8 @@
   ${ assets_js.join("\n\n\n\n") }
 
   // Nextflow report data
-  window.data = $payload;
-  window.options = $options;
+  window.data = ${payload};
+  window.options = ${options};
 
   </script>
 
