Refactor: Removed remnant
Signed-off-by: JosuaCarl <josua.carl@uni-tuebingen.de>

--- a/plugins/nf-co2footprint/src/resources/assets/CO2FootprintReportTemplate.html
+++ b/plugins/nf-co2footprint/src/resources/assets/CO2FootprintReportTemplate.html
@@ -22,7 +22,6 @@
   <meta name="author" content="Sabrina Krakau">
   <link rel="icon" type="image/png" href="https://www.nextflow.io/img/favicon.png" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="CO2FootprintReportTemplate.css">
 
   <title>[${workflow.runName}] Nextflow CO<sub>2</sub>e Footprint Report</title>
 
@@ -142,7 +141,7 @@
 
   <div class="container">
     <h2 id="tasks" style="padding-top: 40px;">Tasks</h2>
-    <div id="tasks-table" class="mb-3">
+    <div id="tasks-present-table" class="mb-3">
       <form class="form-inline" id="nf-form-humanreadable">
         <label class="mr-sm-2" for="nf-table-humanreadable">Values shown as:</label>
         <select class="custom-select mb-2 mr-sm-2 mb-sm-0" id="nf-table-humanreadable">
