Fix: Small fixes to Javascript
Test: adjusted tests
Signed-off-by: JosuaCarl <josua.carl@uni-tuebingen.de>

--- a/plugins/nf-co2footprint/src/testResources/report_test.html
+++ b/plugins/nf-co2footprint/src/testResources/report_test.html
@@ -210,7 +210,7 @@ footer a {
       <dl>
         <dt>Run times</dt>
         <dd>
-          <span id="workflow_start">30-May-2025 12:46:51</span> - <span id="workflow_complete">30-May-2025 12:46:51</span>
+          <span id="workflow_start">03-Jun-2025 17:35:07</span> - <span id="workflow_complete">03-Jun-2025 17:35:07</span>
           (<span id="completed_fromnow"></span>duration: <strong>null</strong>)
         </dd>
 
@@ -812,7 +812,7 @@ $(function() {
     var scopes = ['p', 'n', 'u', 'm', '', 'K', 'M', 'G', 'T', 'P', 'E']; // Units: pico, nano, micro, milli, 0, Kilo, Mega, Giga, Tera, Peta, Exa
     var scopeIndex = scopes.indexOf(scope);
 
-    while (value >= 1000 && scopeIndex < units.length - 1) {
+    while (value >= 1000 && scopeIndex < scopes.length - 1) {
       value /= 1000;
       scopeIndex++;
     }
@@ -898,7 +898,7 @@ $(function() {
     var targetValueFormatted = Math.floor(targetValue)
 
     // Singularize unit if value is exactly 1 and unit is plural
-    if (targetValueFormatted == 1 && ['days', 'weeks', 'months', 'years'].contains(targetUnit)) {
+    if (targetValueFormatted == 1 && ['days', 'weeks', 'months', 'years'].includes(targetUnit)) {
       targetUnit = targetUnit.slice(0, -1) // e.g. "days" -> "day"
     }
 
@@ -909,8 +909,6 @@ $(function() {
 
     // Only add to output if above threshold or no threshold set
     if (threshold == null || targetValueFormatted > threshold) {
-      console.log(threshold)
-      console.log(targetValueFormatted)
       value = targetValue - targetValueFormatted
       unit = largestUnit
 
@@ -918,8 +916,6 @@ $(function() {
       var formattedValue = targetValueFormatted.toFixed(2)
       readableString += readableString ? ' ' + formattedValue + targetUnit : formattedValue + targetUnit
     }
-
-    console.log(readableString)
 
     // If we've reached the smallest unit or max steps, return the result
     if (numSteps == 0) {
