Fix: Small error preventing the reading of UTF-8 characters like © from the template
Test: Adjusted tests accordingly
Signed-off-by: JosuaCarl <josua.carl@uni-tuebingen.de>

--- a/plugins/nf-co2footprint/src/resources/assets/CO2FootprintReportTemplate.html
+++ b/plugins/nf-co2footprint/src/resources/assets/CO2FootprintReportTemplate.html
@@ -16,14 +16,14 @@
   -->
 <html lang="en">
 <head>
-  <meta charset="utf-8">
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="Nextflow workflow report for run id [${workflow.runName}]">
   <meta name="author" content="Sabrina Krakau">
   <link rel="icon" type="image/png" href="https://www.nextflow.io/img/favicon.png" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-  <title>[${workflow.runName}] Nextflow CO<sub>2</sub>e Footprint Report</title>
+  <title>[${workflow.runName}] Nextflow CO₂e Footprint Report</title>
 
   <style>
   ${ assets_css.join("\n\n\n\n") }
