--- a/plugins/nf-co2footprint/src/testResources/report_test.html
+++ b/plugins/nf-co2footprint/src/testResources/report_test.html
@@ -951,49 +951,65 @@ $(function() {
   }
 
   // Collect metrics by process
-  for(let i in window.data.summary){
-    let metrics = window.data.summary[i];
-    let proc = metrics.process;
+  for(let processName in window.data.summary){
+    let metrics = window.data.summary[processName];
 
-    if(!window.data_byprocess.hasOwnProperty(proc)){
-      window.data_byprocess[proc] = {};
-    }
+    // Add an empty map if the process is not already present
+    window.statsByProcess[processName] ??= {};
 
-    for (let key in metrics) {
-      if (metrics[key] != null) {
-        window.data_byprocess[proc][key] = [];
-        if( metrics[key].min == metrics[key].max ) {
-            // min equals max ==> show just a value
-            window.data_byprocess[proc][key].push(metrics[key].min);
-        }
-        else {
-            // otherwise show all values
-            window.data_byprocess[proc][key].push(metrics[key].min);
-            window.data_byprocess[proc][key].push(metrics[key].q1);
-            window.data_byprocess[proc][key].push(metrics[key].q1);
-            window.data_byprocess[proc][key].push(metrics[key].q2);
-            window.data_byprocess[proc][key].push(metrics[key].q3);
-            window.data_byprocess[proc][key].push(metrics[key].q3);
-            window.data_byprocess[proc][key].push(metrics[key].max);
-        }
-        if (key == "time") {
-          window.data_byprocess[proc][key] = window.data_byprocess[proc][key].map(function(d,i){
-            return moment.duration(d).asMinutes().toFixed(1);
-          });
-        }
+    for (let metricName in metrics) {
+      // Skip if metric is not present
+      if (metrics[metricName] == null) { continue; }
+
+      if( metrics[metricName]['min'] == metrics[metricName]['max'] ) {
+        // min equals max ==> show just a value
+        window.statsByProcess[processName][metricName] = [ metrics[metricName]['min'] ];
+      }
+      else {
+          // otherwise show all values
+          window.statsByProcess[processName][metricName] = ['min', 'q1', 'q2', 'q3', 'max'].map(stat => metrics[metricName][stat])
+      }
+      if (metricName == "time") {
+        window.statsByProcess[processName][metricName] = window.statsByProcess[processName][metricName].map(function(d,i){
+          return moment.duration(d).asMinutes().toFixed(1);
+        });
       }
     }
   }
 
   // Plot histograms of resource usage
   var data = [];
-  for(var pname in window.data_byprocess){
-    if( !window.data_byprocess.hasOwnProperty(pname) )
-        continue;
-    var smry = window.data_byprocess[pname];
-    data.push({x:pname, y: norm_units(smry.co2e), name: pname, legendgroup: pname, type:'box', boxmean: true, boxpoints: false});
-    // energy will be plotted with transparent color, hiding hover info and legend, but linked to tye right y-axis
-    data.push({x:pname, y: norm_units(smry.energy), name: pname, legendgroup: pname, type:'box', boxmean: true, boxpoints: false, yaxis: 'y2', showlegend:false, hoverinfo: 'skip', marker: {color: 'rgba(0,0,0,0)'}, fillcolor: 'rgba(0,0,0,0)'});
+  for(var processName in window.statsByProcess){
+
+    // Extract process statistics
+    var stats = window.statsByProcess[processName];
+
+    // Add CO2 Boxplot to plot
+    data.push(
+      {
+        x:processName, y: norm_units(stats.co2e), name: processName, legendgroup: processName,
+        type:'box', boxmean: true, boxpoints: false
+      }
+    );
+
+    // Add outline of CO2 emissions from non-cached processes to plot
+    data.push(
+      {
+        x:processName, y: norm_units(stats.co2e_non_cached), name: processName, legendgroup: processName,
+        type:'box', boxmean: true, boxpoints: false, showlegend: false,
+        marker: { color: 'rgba(128, 128, 128, 0.01)' }, fillcolor: 'rgba(128, 128, 128, 0.01)', line: { color: 'rgba(128, 128, 128, 0.25)' },
+        hovertext: 'Non-cached CO2e emissions', hoverinfo: 'text'
+      }
+    );
+
+    // Add energy to link to the right y-axis, hiding the object, hover info and legend itself
+    data.push(
+      {
+        x:processName, y: norm_units(stats.energy), name: processName, legendgroup: processName,
+        type:'box', boxmean: true, boxpoints: false, yaxis: 'y2', showlegend: false,
+        hoverinfo: 'skip', marker: {color: 'rgba(0,0,0,0)'}, fillcolor: 'rgba(0,0,0,0)'
+      }
+    );
   }
 
   var tickformat = [{
@@ -1172,7 +1188,7 @@ $(function() {
 });
 
   // Nextflow report data
-  window.data = {"trace":[{"task_id":"111","hash":"-","native_id":"-","process":"observerTestProcess","module":"-","container":"-","tag":"-","name":"-","status":"COMPLETED","exit":"-","submit":"-","start":"-","complete":"-","duration":"-","realtime":"1h","%cpu":"100.0%","%mem":"-","rss":"-","vmem":"-","peak_rss":"-","peak_vmem":"-","rchar":"-","wchar":"-","syscr":"-","syscw":"-","read_bytes":"-","write_bytes":"-","attempt":"-","workdir":"-","script":"-","scratch":"-","queue":"-","cpus":"1","memory":"7 GB","disk":"-","time":"-","env":"-","error_action":"-","vol_ctxt":"-","inv_ctxt":"-","hostname":"-","cpu_model":"Unknown model","energy":"9607.5","co2e":"4611.6","time":"1.0","ci":"480.0","cpus":"1","powerdrawCPU":"7.0","cpuUsage":"100.0","memory":"7","name":"-","cpu_model":"Unknown model"}],"summary":[{"process":"observerTestProcess","co2e":{"mean":4611.6,"minLabel":null,"min":4611.6,"q1Label":null,"q1":4611.6,"q2Label":null,"q2":4611.6,"q3Label":null,"q3":4611.6,"maxLabel":null,"max":4611.6},"energy":{"mean":9607.5,"minLabel":null,"min":9607.5,"q1Label":null,"q1":9607.5,"q2Label":null,"q2":9607.5,"q3Label":null,"q3":9607.5,"maxLabel":null,"max":9607.5},"co2e_non_cached":{"mean":4611.6,"minLabel":null,"min":4611.6,"q1Label":null,"q1":4611.6,"q2Label":null,"q2":4611.6,"q3Label":null,"q3":4611.6,"maxLabel":null,"max":4611.6},"energy_non_cached":{"mean":9607.5,"minLabel":null,"min":14607.5,"q1Label":null,"q1":9607.5,"q2Label":null,"q2":9607.5,"q3Label":null,"q3":9607.5,"maxLabel":null,"max":9607.5}}]};
+  window.data = {"trace":[{"task_id":"111","hash":"-","native_id":"-","process":"observerTestProcess","module":"-","container":"-","tag":"-","name":"-","status":"COMPLETED","exit":"-","submit":"-","start":"-","complete":"-","duration":"-","realtime":"1h","%cpu":"100.0%","%mem":"-","rss":"-","vmem":"-","peak_rss":"-","peak_vmem":"-","rchar":"-","wchar":"-","syscr":"-","syscw":"-","read_bytes":"-","write_bytes":"-","attempt":"-","workdir":"-","script":"-","scratch":"-","queue":"-","cpus":"1","memory":"7 GB","disk":"-","time":"-","env":"-","error_action":"-","vol_ctxt":"-","inv_ctxt":"-","hostname":"-","cpu_model":"Unknown model","energy":"9607.5","co2e":"4611.6","time":"1.0","ci":"480.0","cpus":"1","powerdrawCPU":"7.0","cpuUsage":"100.0","memory":"7","name":"-","cpu_model":"Unknown model"}],"summary":{"observerTestProcess":{"co2e":{"all":[4611.6],"total":4611.6,"mean":4611.6,"minLabel":null,"min":4611.6,"q1Label":null,"q1":4611.6,"q2Label":null,"q2":4611.6,"q3Label":null,"q3":4611.6,"maxLabel":null,"max":4611.6},"energy":{"all":[9607.5],"total":9607.5,"mean":9607.5,"minLabel":null,"min":9607.5,"q1Label":null,"q1":9607.5,"q2Label":null,"q2":9607.5,"q3Label":null,"q3":9607.5,"maxLabel":null,"max":9607.5},"co2e_non_cached":{"all":[4611.6],"total":4611.6,"mean":4611.6,"minLabel":null,"min":4611.6,"q1Label":null,"q1":4611.6,"q2Label":null,"q2":4611.6,"q3Label":null,"q3":4611.6,"maxLabel":null,"max":4611.6},"energy_non_cached":{"all":[9607.5],"total":9607.5,"mean":9607.5,"minLabel":null,"min":14607.5,"q1Label":null,"q1":9607.5,"q2Label":null,"q2":9607.5,"q3Label":null,"q3":9607.5,"maxLabel":null,"max":9607.5}}}};
   window.options = [{"option":"ci","value":"480.0"},{"option":"customCpuTdpFile","value":null},{"option":"ignoreCpuModel","value":"false"},{"option":"location","value":null},{"option":"powerdrawCpuDefault","value":null},{"option":"powerdrawMem","value":"0.3725"},{"option":"pue","value":"1.0"},{"option":"reportFile","value":"/var/folders/hy/br8lmc9n32ld843gzkx6yfwh0000gp/T/tmpdir14244490045350207129/report_test.html"},{"option":"summaryFile","value":"/var/folders/hy/br8lmc9n32ld843gzkx6yfwh0000gp/T/tmpdir14244490045350207129/summary_test.txt"},{"option":"traceFile","value":"/var/folders/hy/br8lmc9n32ld843gzkx6yfwh0000gp/T/tmpdir14244490045350207129/trace_test.txt"}];
 
   </script>
