--- a/plugins/nf-co2footprint/src/resources/assets/CO2FootprintReportTemplate.html
+++ b/plugins/nf-co2footprint/src/resources/assets/CO2FootprintReportTemplate.html
@@ -152,9 +152,28 @@
   <div class="container">
     <h2 id="resources" style="padding-top: 40px;">CO<sub>2</sub>e Footprint Measures</h2>
 
-    <div id="co2eplot"></div>
-    <p class="mt-3">The plot shows the distribution of CO<sub>2</sub>e emissions and corresponding energy consumptions for each workflow process. The values that are displayed when hovering over the plot refer to the CO<sub>2</sub>e emissions.</p>
+    <ul class="nav nav-tabs" id="co2eplot_tabs" role="tablist">
+      <li class="nav-item">
+        <a class="nav-link active" id="co2e-total-plot_tablink" data-toggle="tab" href="#co2e-total-plot_tabpanel" role="tab" aria-controls="co2e-total-plot_tabpanel" aria-expanded="false">
+          Total CO2 Emissions
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" id="co2e-non-cached-plot_tablink" data-toggle="tab" href="#co2e-non-cached-plot_tabpanel" role="tab" aria-controls="co2e-non-cached-plot_tabpanel" aria-expanded="false">
+          CO2 Emissions without cached tasks
+        </a>
+      </li>
+    </ul>
+    <div class="tab-content" id="co2eplot_tabcontent">
+      <div class="tab-pane fade show active" id="co2e-total-plot_tabpanel" role="tabpanel">
+        <div id="co2e-total-plot"></div>
+      </div>
+      <div class="tab-pane fade" id="co2e-non-cached-plot_tabpanel" role="tabpanel">
+        <div id="co2e-non-cached-plot"></div>
+      </div>
+    </div>
   </div>
+  <p class="mt-3">The plot shows the distribution of CO<sub>2</sub>e emissions and corresponding energy consumptions for each workflow process. The values that are displayed when hovering over the plot refer to the CO<sub>2</sub>e emissions.</p>
 
   <div class="container">
     <h2 id="tasks" style="padding-top: 40px;">Tasks</h2>
