Test: Adjusted report control

--- a/plugins/nf-co2footprint/src/resources/assets/CO2FootprintReportTemplate.html
+++ b/plugins/nf-co2footprint/src/resources/assets/CO2FootprintReportTemplate.html
@@ -155,12 +155,12 @@
     <ul class="nav nav-tabs" id="co2eplot_tabs" role="tablist">
       <li class="nav-item">
         <a class="nav-link active" id="co2e-total-plot_tablink" data-toggle="tab" href="#co2e-total-plot_tabpanel" role="tab" aria-controls="co2e-total-plot_tabpanel" aria-expanded="false">
-          Total CO2 Emissions
+          All tasks
         </a>
       </li>
       <li class="nav-item">
         <a class="nav-link" id="co2e-non-cached-plot_tablink" data-toggle="tab" href="#co2e-non-cached-plot_tabpanel" role="tab" aria-controls="co2e-non-cached-plot_tabpanel" aria-expanded="false">
-          CO2 Emissions without cached tasks
+          Without cached tasks
         </a>
       </li>
     </ul>
