--- a/plugins/nf-co2footprint/src/testResources/report_test.html
+++ b/plugins/nf-co2footprint/src/testResources/report_test.html
@@ -283,9 +283,28 @@ footer a {
   <div class="container">
     <h2 id="resources" style="padding-top: 40px;">CO<sub>2</sub>e Footprint Measures</h2>
 
-    <div id="co2eplot"></div>
-    <p class="mt-3">The plot shows the distribution of CO<sub>2</sub>e emissions and corresponding energy consumptions for each workflow process. The values that are displayed when hovering over the plot refer to the CO<sub>2</sub>e emissions.</p>
+    <ul class="nav nav-tabs" id="co2eplot_tabs" role="tablist">
+      <li class="nav-item">
+        <a class="nav-link active" id="co2e-total-plot_tablink" data-toggle="tab" href="#co2e-total-plot_tabpanel" role="tab" aria-controls="co2e-total-plot_tabpanel" aria-expanded="false">
+          All tasks
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" id="co2e-non-cached-plot_tablink" data-toggle="tab" href="#co2e-non-cached-plot_tabpanel" role="tab" aria-controls="co2e-non-cached-plot_tabpanel" aria-expanded="false">
+          Without cached tasks
+        </a>
+      </li>
+    </ul>
+    <div class="tab-content" id="co2eplot_tabcontent">
+      <div class="tab-pane fade show active" id="co2e-total-plot_tabpanel" role="tabpanel">
+        <div id="co2e-total-plot"></div>
+      </div>
+      <div class="tab-pane fade" id="co2e-non-cached-plot_tabpanel" role="tabpanel">
+        <div id="co2e-non-cached-plot"></div>
+      </div>
+    </div>
   </div>
+  <p class="mt-3">The plot shows the distribution of CO<sub>2</sub>e emissions and corresponding energy consumptions for each workflow process. The values that are displayed when hovering over the plot refer to the CO<sub>2</sub>e emissions.</p>
 
   <div class="container">
     <h2 id="tasks" style="padding-top: 40px;">Tasks</h2>
@@ -999,34 +1018,42 @@ $(function() {
   }
 
   // Plot histograms of resource usage
-  var data = [];
+  var plot_data_total = [];
+  var plot_data_non_cached = [];
   for(var processName in window.statsByProcess){
 
     // Extract process statistics
     var stats = window.statsByProcess[processName];
 
     // Add CO2 Boxplot to plot
-    data.push(
+    plot_data_total.push(
       {
-        x:processName, y: norm_units(stats.co2e), name: processName + ' - Total', legendgroup: 'Total',
+        x:processName, y: norm_units(stats.co2e), name: processName,
         type:'box', boxmean: true, boxpoints: false
       }
     );
 
-    // Add outline of CO2 emissions from non-cached processes to plot
-    data.push(
+    // Add energy to link to the right y-axis, hiding the object, hover info and legend itself
+    plot_data_total.push(
       {
-        x:processName, y: norm_units(stats.co2e_non_cached), name: processName + ' - without cached', legendgroup: 'without cached',
+        x:processName, y: norm_units(stats.energy), name: processName,
+        type:'box', boxmean: true, boxpoints: false, yaxis: 'y2', showlegend: false,
+        hoverinfo: 'skip', marker: {color: 'rgba(0,0,0,0)'}, fillcolor: 'rgba(0,0,0,0)'
+      }
+    );
+
+    // Add outline of CO2 emissions from non-cached processes to plot
+    plot_data_non_cached.push(
+      {
+        x:processName, y: norm_units(stats.co2e_non_cached), name: processName,
         type:'box', boxmean: true, boxpoints: false,
-        marker: { color: 'rgba(128, 128, 128, 0.01)' }, fillcolor: 'rgba(128, 128, 128, 0.01)', line: { color: 'rgba(128, 128, 128, 0.25)' },
-        hovertext: 'Non-cached CO2e emissions'
       }
     );
 
     // Add energy to link to the right y-axis, hiding the object, hover info and legend itself
-    data.push(
+    plot_data_non_cached.push(
       {
-        x:processName, y: norm_units(stats.energy), name: processName + ' - Total', legendgroup: 'Total',
+        x:processName, y: norm_units(stats.energy_non_cached), name: processName,
         type:'box', boxmean: true, boxpoints: false, yaxis: 'y2', showlegend: false,
         hoverinfo: 'skip', marker: {color: 'rgba(0,0,0,0)'}, fillcolor: 'rgba(0,0,0,0)'
       }
@@ -1055,7 +1082,14 @@ $(function() {
     boxmode: 'group',
   };
 
-  Plotly.newPlot('co2eplot', data, layout);
+  Plotly.newPlot('co2e-total-plot', plot_data_total, layout);
+  Plotly.newPlot('co2e-non-cached-plot', plot_data_non_cached, layout);
+
+  // Convert to readable units, optionally with a starting scope and a unit label
+  function readable_units(value, scope = '', unit = '') {
+    var units = ['p', 'n', 'u', 'm', '', 'K', 'M', 'G', 'T', 'P', 'E']; // pico, nano, micro, milli, 0, Kilo, Mega, Giga, Tera, Peta, Exa
+    var scopeIndex = units.indexOf(scope);
+    if (scopeIndex === -1) scopeIndex = 4; // Default to '' (no prefix) if not found
 
   //
   // Table creation functions
