--- a/plugins/nf-co2footprint/src/resources/assets/CO2FootprintReportTemplate.html
+++ b/plugins/nf-co2footprint/src/resources/assets/CO2FootprintReportTemplate.html
@@ -168,7 +168,7 @@
       <div class="tab-pane fade show active" id="co2e-total-plot_tabpanel" role="tabpanel">
         <div id="co2e-total-plot"></div>
       </div>
-      <div class="tab-pane fade" id="co2e-non-cached-plot_tabpanel" role="tabpanel">
+      <div class="tab-pane fade show active" id="co2e-non-cached-plot_tabpanel" role="tabpanel">
         <div id="co2e-non-cached-plot"></div>
       </div>
     </div>
