--- a/plugins/nf-co2footprint/src/testResources/report_test.html
+++ b/plugins/nf-co2footprint/src/testResources/report_test.html
@@ -261,13 +261,13 @@ footer a {
         </summary>
         <div class="d-flex flex-wrap mt-4 mb-5" style="gap: 1.5rem; margin-left: -0.75rem; margin-right: -0.75rem;">
           <div class="metric-card card p-1" style="width: 18%; text-align: center; flex: 1 1 200px; min-width: 200px;">
-            <span class="metric">7.01 g</span>
+            <span class="metric">4.61 g</span>
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="currentColor" d="m19.21 12.04l-1.53-.11l-.3-1.5A5.484 5.484 0 0 0 12 6C9.94 6 8.08 7.14 7.12 8.96l-.5.95l-1.07.11A3.99 3.99 0 0 0 2 14c0 2.21 1.79 4 4 4h13c1.65 0 3-1.35 3-3c0-1.55-1.22-2.86-2.79-2.96z" opacity=".3"/><path fill="currentColor" d="M19.35 10.04A7.49 7.49 0 0 0 12 4C9.11 4 6.6 5.64 5.35 8.04A5.994 5.994 0 0 0 0 14c0 3.31 2.69 6 6 6h13c2.76 0 5-2.24 5-5c0-2.64-2.05-4.78-4.65-4.96zM19 18H6c-2.21 0-4-1.79-4-4c0-2.05 1.53-3.76 3.56-3.97l1.07-.11l.5-.95A5.469 5.469 0 0 1 12 6c2.62 0 4.88 1.86 5.39 4.43l.3 1.5l1.53.11A2.98 2.98 0 0 1 22 15c0 1.65-1.35 3-3 3z"/></svg>
             <span class="metric-title">CO<sub>2</sub>e emissions</span>
           </div>
 
           <div class="metric-card card p-1" style="width: 18%; text-align: center; flex: 1 1 200px; min-width: 200px;">
-            <span class="metric">14.61 Wh</span>
+            <span class="metric">9.61 Wh</span>
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48"><mask id="ipSEnergySocket0"><g fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="4"><path d="M24 44c11.046 0 20-8.954 20-20S35.046 4 24 4S4 12.954 4 24s8.954 20 20 20Zm4-23v-5m-8 5v-5"/><path fill="#fff" d="M24 32a8 8 0 0 0 8-8v-3H16v3a8 8 0 0 0 8 8Z"/><path d="M24 44V32"/></g></mask><path fill="currentColor" d="M0 0h48v48H0z" mask="url(#ipSEnergySocket0)"/></svg>
             <span class="metric-title">Energy consumption</span>
           </div>
@@ -299,7 +299,7 @@ footer a {
       <div class="tab-pane fade show active" id="co2e-total-plot_tabpanel" role="tabpanel">
         <div id="co2e-total-plot"></div>
       </div>
-      <div class="tab-pane fade" id="co2e-non-cached-plot_tabpanel" role="tabpanel">
+      <div class="tab-pane fade show active" id="co2e-non-cached-plot_tabpanel" role="tabpanel">
         <div id="co2e-non-cached-plot"></div>
       </div>
     </div>
@@ -968,7 +968,7 @@ function make_core_usage_factor(usageFactor, type){
 
 
 // Map for collecting statistics by process
-window.data_byprocess = {};
+window.statsByProcess = {};
 
 //
 // This block is only executed after the page is fully loaded
@@ -1084,12 +1084,6 @@ $(function() {
 
   Plotly.newPlot('co2e-total-plot', plot_data_total, layout);
   Plotly.newPlot('co2e-non-cached-plot', plot_data_non_cached, layout);
-
-  // Convert to readable units, optionally with a starting scope and a unit label
-  function readable_units(value, scope = '', unit = '') {
-    var units = ['p', 'n', 'u', 'm', '', 'K', 'M', 'G', 'T', 'P', 'E']; // pico, nano, micro, milli, 0, Kilo, Mega, Giga, Tera, Peta, Exa
-    var scopeIndex = units.indexOf(scope);
-    if (scopeIndex === -1) scopeIndex = 4; // Default to '' (no prefix) if not found
 
   //
   // Table creation functions
@@ -1239,7 +1233,7 @@ $(function() {
 });
 
   // Nextflow report data
-  window.data = {"trace":[{"task_id":"111","hash":"-","native_id":"-","process":"observerTestProcess","module":"-","container":"-","tag":"-","name":"-","status":"COMPLETED","exit":"-","submit":"-","start":"-","complete":"-","duration":"-","realtime":"1h","%cpu":"100.0%","%mem":"-","rss":"-","vmem":"-","peak_rss":"-","peak_vmem":"-","rchar":"-","wchar":"-","syscr":"-","syscw":"-","read_bytes":"-","write_bytes":"-","attempt":"-","workdir":"-","script":"-","scratch":"-","queue":"-","cpus":"1","memory":"7 GB","disk":"-","time":"-","env":"-","error_action":"-","vol_ctxt":"-","inv_ctxt":"-","hostname":"-","cpu_model":"Unknown model","energy":"9607.5","co2e":"4611.6","time":"1.0","ci":"480.0","cpus":"1","powerdrawCPU":"7.0","cpuUsage":"100.0","memory":"7","name":"-","cpu_model":"Unknown model"}],"summary":{"observerTestProcess":{"co2e":{"all":[4611.6],"total":4611.6,"mean":4611.6,"minLabel":null,"min":4611.6,"q1Label":null,"q1":4611.6,"q2Label":null,"q2":4611.6,"q3Label":null,"q3":4611.6,"maxLabel":null,"max":4611.6},"energy":{"all":[9607.5],"total":9607.5,"mean":9607.5,"minLabel":null,"min":9607.5,"q1Label":null,"q1":9607.5,"q2Label":null,"q2":9607.5,"q3Label":null,"q3":9607.5,"maxLabel":null,"max":9607.5},"co2e_non_cached":{"all":[4611.6],"total":4611.6,"mean":4611.6,"minLabel":null,"min":4611.6,"q1Label":null,"q1":4611.6,"q2Label":null,"q2":4611.6,"q3Label":null,"q3":4611.6,"maxLabel":null,"max":4611.6},"energy_non_cached":{"all":[9607.5],"total":9607.5,"mean":9607.5,"minLabel":null,"min":14607.5,"q1Label":null,"q1":9607.5,"q2Label":null,"q2":9607.5,"q3Label":null,"q3":9607.5,"maxLabel":null,"max":9607.5}}}};
+  window.data = {"trace":[{"task_id":"111","hash":"-","native_id":"-","process":"observerTestProcess","module":"-","container":"-","tag":"-","name":"-","status":"COMPLETED","exit":"-","submit":"-","start":"-","complete":"-","duration":"-","realtime":"1h","%cpu":"100.0%","%mem":"-","rss":"-","vmem":"-","peak_rss":"-","peak_vmem":"-","rchar":"-","wchar":"-","syscr":"-","syscw":"-","read_bytes":"-","write_bytes":"-","attempt":"-","workdir":"-","script":"-","scratch":"-","queue":"-","cpus":"1","memory":"7 GB","disk":"-","time":"-","env":"-","error_action":"-","vol_ctxt":"-","inv_ctxt":"-","hostname":"-","cpu_model":"Unknown model","energy":"9607.5","co2e":"4611.6","time":"1.0","ci":"480.0","cpus":"1","powerdrawCPU":"7.0","cpuUsage":"100.0","memory":"7","name":"-","cpu_model":"Unknown model"}],"summary":{"observerTestProcess":{"co2e":{"all":[4611.6],"total":4611.6,"mean":4611.6,"minLabel":null,"min":4611.6,"q1Label":null,"q1":4611.6,"q2Label":null,"q2":4611.6,"q3Label":null,"q3":4611.6,"maxLabel":null,"max":4611.6},"energy":{"all":[9607.5],"total":9607.5,"mean":9607.5,"minLabel":null,"min":9607.5,"q1Label":null,"q1":9607.5,"q2Label":null,"q2":9607.5,"q3Label":null,"q3":9607.5,"maxLabel":null,"max":9607.5},"co2e_non_cached":{"all":[4611.6],"total":4611.6,"mean":4611.6,"minLabel":null,"min":4611.6,"q1Label":null,"q1":4611.6,"q2Label":null,"q2":4611.6,"q3Label":null,"q3":4611.6,"maxLabel":null,"max":4611.6},"energy_non_cached":{"all":[9607.5],"total":9607.5,"mean":9607.5,"minLabel":null,"min":9607.5,"q1Label":null,"q1":9607.5,"q2Label":null,"q2":9607.5,"q3Label":null,"q3":9607.5,"maxLabel":null,"max":9607.5}}}};
   window.options = [{"option":"ci","value":"480.0"},{"option":"customCpuTdpFile","value":null},{"option":"ignoreCpuModel","value":"false"},{"option":"location","value":null},{"option":"powerdrawCpuDefault","value":null},{"option":"powerdrawMem","value":"0.3725"},{"option":"pue","value":"1.0"},{"option":"reportFile","value":"/var/folders/hy/br8lmc9n32ld843gzkx6yfwh0000gp/T/tmpdir14244490045350207129/report_test.html"},{"option":"summaryFile","value":"/var/folders/hy/br8lmc9n32ld843gzkx6yfwh0000gp/T/tmpdir14244490045350207129/summary_test.txt"},{"option":"traceFile","value":"/var/folders/hy/br8lmc9n32ld843gzkx6yfwh0000gp/T/tmpdir14244490045350207129/trace_test.txt"}];
 
   </script>
