--- a/plugins/nf-co2footprint/src/resources/assets/CO2FootprintReportTemplate.html
+++ b/plugins/nf-co2footprint/src/resources/assets/CO2FootprintReportTemplate.html
@@ -168,12 +168,13 @@
       <div class="tab-pane fade show active" id="co2e-total-plot_tabpanel" role="tabpanel">
         <div id="co2e-total-plot"></div>
       </div>
-      <div class="tab-pane fade show active" id="co2e-non-cached-plot_tabpanel" role="tabpanel">
+      <div class="tab-pane fade" id="co2e-non-cached-plot_tabpanel" role="tabpanel">
         <div id="co2e-non-cached-plot"></div>
       </div>
     </div>
+
+    <p class="mt-3">The plot shows the distribution of CO<sub>2</sub>e emissions and corresponding energy consumptions for each workflow process. The values that are displayed when hovering over the plot refer to the CO<sub>2</sub>e emissions.</p>
   </div>
-  <p class="mt-3">The plot shows the distribution of CO<sub>2</sub>e emissions and corresponding energy consumptions for each workflow process. The values that are displayed when hovering over the plot refer to the CO<sub>2</sub>e emissions.</p>
 
   <div class="container">
     <h2 id="tasks" style="padding-top: 40px;">Tasks</h2>
