Feature: First try to add plot
Signed-off-by: JosuaCarl <josua.carl@uni-tuebingen.de>

--- a/plugins/nf-co2footprint/src/resources/assets/CO2FootprintReportTemplate.html
+++ b/plugins/nf-co2footprint/src/resources/assets/CO2FootprintReportTemplate.html
@@ -37,6 +37,7 @@ ${ assets_js.join("\n\n\n\n").replaceAll("(?m)^", '    ') }
     // Nextflow report data
     window.data = ${data};
     window.options = ${options};
+    window.timeCiRecords = ${timeCiRecords};
   </script>
 
 </head>
