Feature: First try to add plot
Signed-off-by: JosuaCarl <josua.carl@uni-tuebingen.de>

--- a/plugins/nf-co2footprint/src/resources/assets/CO2FootprintReportTemplate.html
+++ b/plugins/nf-co2footprint/src/resources/assets/CO2FootprintReportTemplate.html
@@ -388,8 +388,8 @@ ${ assets_js.join("\n\n\n\n").replaceAll("(?m)^", '    ') }
 
   <% if (used_EM_api) { %>
   <div class="container">
-    <h2 id="CI" class="section">Carbon intensity fluctuation</h2>
-    <div id="ci_plot"></div>
+    <h2 id="ci-heading" class="section">Carbon intensity fluctuation</h2>
+    <div id="ci-plot"></div>
     <p class="mt-3 mb-3">This plot shows the carbon intensity fluctuation during workflow computation.</p>
   </div>
   <% } %>
